--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,18 @@
 <%- include('./components/Spinner'); -%>
-<br />
-<br />
-<h3>This page is public</h3>
-<section class="m-5 p-5">
-  <a
-    type="button"
-    class="btn btn-primary"
-    style="padding: 8px 35px"
-    data-toggle="modal"
-    data-target="#exampleModal"
-    href="/login"
-    id="login-button"
-  >
-    Login
-  </a>
-</section>
+
+<header>
+	<h3>This page is public</h3>
+</header>
+<main>
+	<a
+		type="button"
+		class="btn btn-primary bg-gradient"
+		style="padding: 8px 35px"
+		data-toggle="modal"
+		data-target="#exampleModal"
+		href="/login"
+		id="login-button"
+	>
+		Login
+	</a>
+</main>
