--- a/views/components/MainMenu.ejs
+++ b/views/components/MainMenu.ejs
@@ -1,17 +1,18 @@
 <%- include('../components/NavBar'); -%>
 
 <div
-  class="offcanvas offcanvas-start"
+  class="offcanvas offcanvas-start rounded-end"
   data-bs-scroll="true"
   tabindex="-1"
-  id="offcanvasWithBothOptions"
-  aria-labelledby="offcanvasWithBothOptionsLabel"
+  id="main-menu-canvas"
+  aria-labelledby="main-menu-Label"
 >
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title ms-1" id="offcanvasWithBothOptionsLabel">Menu</h5>
-    <span class="material-icons" id="arrow-forward" data-bs-dismiss="offcanvas" aria-label="Close">arrow_forward</span>
+    <h5 class="offcanvas-title ms-1" id="main-menu-Label">Menu</h5>
+    <!-- <i class="bi bi-arrow-right" id="arrow-forward" data-bs-dismiss="offcanvas" aria-label="Close"></i> -->
+    <i class="bi bi-caret-right" id="arrow-forward" data-bs-dismiss="offcanvas" aria-label="Close"></i>
   </div>
-  <div class="offcanvas-body">
+  <div class="offcanvas-body ">
     <ul class="navbar-nav" id='main-menu'/>
 
   </div>
