--- a/views/components/Table.ejs
+++ b/views/components/Table.ejs
@@ -1,6 +1,6 @@
 <table
 	id="dtBasic"
-	class="table table-striped table-bordered display compact table-hover table-auto table-responsive"
+	class="table table-striped table-bordered display compact table-hover table-auto table-responsive bg-gradient"
 	cellspacing="0"
 	width="100%"
 >
