--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,2 +1,7 @@
-<div id="firebaseui-auth-container"></div>
-<div id="loader">Loading...</div>
+<header>
+	<h3>This page is public</h3>
+</header>
+<main>
+	<div id="firebaseui-auth-container"></div>
+	<div id="loader">Loading...</div>
+</main>
