--- a/views/sender.ejs
+++ b/views/sender.ejs
@@ -1,5 +1,5 @@
-<section>
-	<div class="card align-self-center shadow border-0" style="width: 30rem">
+<main>
+	<div class="card align-self-center shadow border-0" id="card-sender">
 		<div class="card-body text-start">
 			<h5 class="card-title text-center"><strong>Who do you want to send a message to?</strong></h5>
 			<form class="form mt-4 has-validation text-black" novalidate id="message-form">
@@ -9,9 +9,9 @@
 				<div class="text-center mt-4" id="btn-cont" style="width: 90%">
 					<button
 						type="submit"
-						class="btn btn-primary border-0 add-tooltip"
+						class="btn btn-primary border-0 add-tooltip btn-sender"
 						id="email"
-						style="background-color: #dd4b39; min-width: 6rem"
+						style="background-color: #dd4b39"
 						role="button"
 						disabled
 						title="Send Email"
@@ -23,7 +23,7 @@
 						type="submit"
 						class="btn btn-primary border-0 add-tooltip"
 						id="whatsapp"
-						style="background-color: #25d366; min-width: 6rem"
+						style="background-color: #25d366"
 						role="button"
 						disabled
 						title="Send WhatsApp Message"
@@ -34,7 +34,6 @@
 						type="submit"
 						class="btn btn-primary border-0 add-tooltip"
 						id="sms"
-						style="min-width: 6rem"
 						role="button"
 						disabled
 						title="Send SMS"
@@ -45,7 +44,7 @@
 			</form>
 		</div>
 	</div>
-</section>
+</main>
 <footer>
 	<p><strong>*</strong>This page is private and protected</p>
 </footer>
