--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,6 @@
 <%- include('./components/Spinner'); -%>
-<section class="w-100 m-0">
-	<div class="card shadow rounded m-0 p-0 w-100 border-0 bg-gradient">
+<main>
+	<div class="card shadow rounded m-0 p-0 w-100 border-0 bg-gradient" id="card-table">
 		<div class="card-body text-start"><%- include('./components/Table'); -%></div>
 	</div>
-</section>
+</main>
