--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7831,9 +7831,13 @@ main {
   margin: auto;
   max-width: 100vw;
   max-height: 100vh;
-  padding: 1.5rem 1rem;
+  padding: 2rem 1rem;
   text-align: center;
   font-family: "Raleway", sans-serif; }
+
+.header-login,
+.main-login {
+  padding: 0.5rem 1rem; }
 
 footer {
   font-family: "Dosis", sans-serif;
