--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -76,9 +76,14 @@ main {
 	margin: auto;
 	max-width: 100vw;
 	max-height: 100vh;
-	padding: 1.5rem 1rem;
+	padding: 2rem 1rem;
 	text-align: center;
 	font-family: $font-primary;
+}
+
+.header-login,
+.main-login {
+	padding: 0.5rem 1rem;
 }
 
 footer {
