--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
-<header>
+<header class="header-login">
 	<h3>This page is public</h3>
 </header>
-<main>
+<main class="main-login">
 	<div id="firebaseui-auth-container"></div>
 	<div id="loader">Loading...</div>
 </main>
