--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7906,6 +7906,9 @@ html[theme='dark'] li {
     border-radius: 5px; }
   .card .card-body h5, .card .card-body .h5 {
     font-size: 14px; }
+  .card .card-body .card-text,
+  .card .card-body ul {
+    text-decoration: none; }
 
 #card-sender {
   width: 18rem; }
@@ -7919,15 +7922,15 @@ html[theme='dark'] .card-body {
 
 @media screen and (min-width: 768px) {
   .card {
-    width: 18rem;
+    width: 22rem;
     font-size: 13px; }
     .card .card-body h5, .card .card-body .h5 {
       font-size: 22px; }
   #card-sender {
-    width: 30rem;
+    width: 22rem;
     font-size: 13px; }
   #card-table {
-    width: 30rem; } }
+    width: 22rem; } }
 
 nav {
   background-color: #0d6efd;
@@ -7995,6 +7998,9 @@ html[theme='dark'] h6,
 html[theme='dark'] .h6,
 html[theme='dark'] p {
   color: #f8f9fa; }
+
+.profile-item {
+  font-weight: bolder; }
 
 @media screen and (min-width: 768px) {
   #main-title {
@@ -8111,7 +8117,7 @@ html[theme='dark'] #toast-header {
 
 .table-text {
   font-size: 8px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 .table-headers {
   font-size: 10px; }
