--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -6,6 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
 		<title><%- title %></title>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.6.4/dayjs.min.js"
+			integrity="sha512-IKOXNA0P3ih6UOEA5pN0RgOZFY9wkb5wA0jsRqB771uIooevsSSSQ3AH3KbQjwZeVSLWbXCNB9KIJksoaUfgrg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 
 		<!-- Styles -->
 
