--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -69,6 +69,9 @@ body {
 	overflow-x: hidden;
 	padding: 0;
 	font-size: $font-size;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 footer,
 header,
